--- a/host-network/docker-compose.yml
+++ b/host-network/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     - REDIS_MASTER_PORT=6380
     - REDIS_MASTER_ADDRESS=localhost
     container_name: redis-sentinel-1
-    command: redis-sentinel /usr/local/etc/redis/sentinel.conf --port 26379  --requirepass redis_pwd
+    command: redis-sentinel /usr/local/etc/redis/sentinel.conf 
     network_mode: "host"
     depends_on:
       - master
@@ -58,7 +58,7 @@ services:
     - REDIS_MASTER_PORT=6380
     - REDIS_MASTER_ADDRESS=localhost
     container_name: redis-sentinel-2
-    command: redis-sentinel /usr/local/etc/redis/sentinel.conf --port 26380  --requirepass redis_pwd
+    command: redis-sentinel /usr/local/etc/redis/sentinel.conf 
     network_mode: "host"
     depends_on:
       - master
@@ -76,7 +76,7 @@ services:
     - REDIS_MASTER_PORT=6380
     - REDIS_MASTER_ADDRESS=localhost
     container_name: redis-sentinel-3
-    command: redis-sentinel /usr/local/etc/redis/sentinel.conf --port 26381  --requirepass redis_pwd
+    command: redis-sentinel /usr/local/etc/redis/sentinel.conf 
     network_mode: "host"
     depends_on:
       - master
