--- a/host-network/docker-compose.yml
+++ b/host-network/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     volumes:
       - ./redis/data-master:/data
     network_mode: "host"
-
+    restart: always
+    
   slave1:
     image: redis
     container_name: redis-slave-1
@@ -17,6 +18,7 @@ services:
     volumes:
       - ./redis/data-slave-1:/data
     network_mode: "host"
+    restart: always
     depends_on:
       - master
 
@@ -27,6 +29,7 @@ services:
     volumes:
       - ./redis/data-slave-2:/data
     network_mode: "host"
+    restart: always    
     depends_on:
       - master
 
@@ -43,6 +46,7 @@ services:
     container_name: redis-sentinel-1
     command: redis-sentinel /usr/local/etc/redis/sentinel.conf 
     network_mode: "host"
+    restart: always    
     depends_on:
       - master
       - slave1
@@ -60,6 +64,7 @@ services:
     container_name: redis-sentinel-2
     command: redis-sentinel /usr/local/etc/redis/sentinel.conf 
     network_mode: "host"
+    restart: always    
     depends_on:
       - master
       - slave1
@@ -78,6 +83,7 @@ services:
     container_name: redis-sentinel-3
     command: redis-sentinel /usr/local/etc/redis/sentinel.conf 
     network_mode: "host"
+    restart: always
     depends_on:
       - master
       - slave1
